css cs-title z-index fix

--- a/css/corporate-site.css
+++ b/css/corporate-site.css
@@ -6964,7 +6964,8 @@ a.past-list-link:link h5,a.past-list-link:hover h5,a.past-list-link:active h5,a.
 {
     position:absolute;
     margin-top:300px;
-    width:100%
+    width:100%;
+    z-index: 10;
 }
 
 div.cs-title-box-botbar-wrapper > div.no-image > div.case-study-title-image
